syntax = "proto3";

option go_package = "github.com/WEGOAPP/userapi/protos/subscribe";

package subscribe;

message SubscribeBlock {
    string OAuth = 1;
    string CNPJ = 2;
    string Name = 3;
}

message Done{
    int32 Status = 1;
}

service SubscribeService {
    rpc SubscribeRequest(SubscribeBlock) returns(Done){}
}
