syntax = "proto3";

option go_package = "github.com/WEGOAPP/userapi/protos/userfeed";

package userfeed;

message User {
    string OAuth = 1;
}

message Sub {
    string CNPJ = 1;
    string Name = 2;
    string LastMessage = 3;
    int64 LMtimestamp = 4;
}

message SubGroup {
    repeated Sub Subs = 1;
}

message FeedBlock {
    string Message = 2;
    int64 TimeStamp = 3;
}

message MainFeed {
    repeated Sub Feed = 1;
}

message ClientCNPJ {
    string CNPJ = 1;
}

message FeedHistory {
    repeated FeedBlock History = 1;
}

service UserFeed {
    rpc GetFeedHistory(ClientCNPJ) returns (FeedHistory){}
    rpc UserSubs(User) returns (MainFeed){}
}